--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrate:create": "knex migrate:make --migrations-directory src/db/migrations"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "better-sqlite3": "^8.3.0",
+    "express": "^4.18.2",
     "knex": "^2.4.2",
     "sqlite3": "^5.1.6"
   }
