--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@faker-js/faker": "^7.6.0",
     "better-sqlite3": "^8.3.0",
     "express": "^4.18.2",
+    "joi": "^17.9.1",
     "knex": "^2.4.2",
     "sqlite3": "^5.1.6"
   }
