--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrate:create": "knex migrate:make --migrations-directory src/db/migrations"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "ts-node": "^10.9.1",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.3.0",
     "express": "^4.18.2",
     "joi": "^17.9.1",
