--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
@@ -26,6 +27,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.1",
     "knex": "^2.4.2",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
   }
 }
